[tool.poetry]
name = "ask_pdf"
version = "0.1.0"
description = "Converse with PDF files with use of RAG"
authors = ["Mikolaj Kaczmarek <m.kaczmarek9@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.11"
jupyter = "1.0.0"
llama-index = "0.9.13"
langchain = "0.0.340"
openai = "1.3.5"
streamlit = "1.28.2"
python-dotenv = "1.0.0"
pypdf = "3.17.2"
sentence-transformers = "2.2.2"
torch = "2.1.1"
transformers = "4.35.2"
ruff = "0.1.6"
pylint = "3.0.2"
isort = "5.12.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
